--- a/BooleanCompiler/CMakeLists.txt
+++ b/BooleanCompiler/CMakeLists.txt
@@ -4,6 +4,6 @@
 cmake_minimum_required (VERSION 3.8)
 
 # Добавьте источник в исполняемый файл этого проекта.
-add_executable (BooleanCompiler "BooleanCompiler.cpp")
+add_executable (BooleanCompiler "BooleanCompiler.cpp" "Logger/FileLogger/FileLogger.h")
 
 # TODO: Добавьте тесты и целевые объекты, если это необходимо.
